# dodal

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .talismanrc  Dockerfile  README.md  README.rst  catalog-info.yaml  conftest.py  dev-requirements.txt  make_switcher.py  p.ipynbpydantic  pull_request_template.md  pyproject.toml  setup.cfg  switcher.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst
.ipynb_checkpoints/: p-checkpoint.ipynbpydantic
0.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.0.2_async_arming/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.0.2_hotfixes/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.0.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.0.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.0.5/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.10.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.11.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.11.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.11.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.11.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.12.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.13.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.13.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.13.2/: genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.14.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.14.1/: .buildinfo  py-modindex.html
1.15.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.15.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.16/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.17/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html
1.17.0/: genindex.html
1.18.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.19.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.2.0/: index.html  objects.inv  search.html
1.20.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.21.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.22.0/: .buildinfo  objects.inv  search.html
1.23.0/: .buildinfo  index.html  objects.inv  search.html
1.24.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.25.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.26.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.27.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.28.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.29.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.29.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.29.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.29.3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.29.4/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.3.0/: genindex.html  index.html  py-modindex.html  search.html
1.30.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.31.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.31.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.32.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.33.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.34.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.34.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.35.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.36.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.36.1a/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
1.36.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  (+6 more)
(+25669 files in other folders)
