[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dls-dodal"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Ophyd devices and other utils that could be used across DLS beamlines"
dependencies = [
    "click",
    "ophyd",
    "ophyd-async<0.4.0",      # Need to pin to <0.4.0 as this requires pydantic>2.0 see https://github.com/DiamondLightSource/dodal/issues/679
    "bluesky",
    "pyepics",
    "dataclasses-json",
    "pillow",
    "zocalo>=0.32.0",
    "requests",
    "graypy",
    "pydantic",
    "opencv-python-headless", # For pin-tip detection.
    "aioca",                  # Required for CA support with ophyd-async.
    "p4p",                    # Required for PVA support with ophyd-async.
    "numpy<2.0",              # Unpin when https://github.com/bluesky/ophyd-async/issues/387 resolved
    "aiofiles",
    "aiohttp",
]

dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "mockito",
    # Commented out due to dependency version conflict with pydantic 1.x
    # "copier",
    "myst-parser",
    "pipdeptree",
    "pre-commit",
    "psutil",
    "pydata-sphinx-theme>=0.12",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-random-order",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxcontrib-mermaid",
    "sphinx-design",
    "sphinx-autodoc-typehints",
    "tox-direct",
    "types-requests",
    "types-mock",
    "types-PyYAML",
    "types-aiofiles",
]

[project.scripts]
dodal = "dodal.__main__:main"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/dodal"

[[project.authors]] # Further authors may be added by duplicating this section
email = "dominic.oram@diamond.ac.uk"
name = "Dominic Oram"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dodal = ["*.txt"]

[tool.setuptools_scm]
write_to = "src/dodal/_version.py"

[tool.pyright]
reportMissingImports = false # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
asyncio_mode = "auto"
markers = [
    "s03: marks tests as requiring the s03 simulator running (deselect with '-m \"not s03\"')",
    "skip_in_pycharm: marks test as not working in pycharm testrunner"
]
addopts = """
    --cov=dodal --cov-report term --cov-report xml:cov.xml
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = [
    "error",
    # Ignore deprecation warning from ophyd_async
    "ignore:dep_util is Deprecated. Use functions from setuptools instead.:DeprecationWarning",
    # Ignore deprecation warning from zocalo
    "ignore:.*pkg_resources.*:DeprecationWarning"
    
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"

[tool.coverage.report]
exclude_also = [
    '^"""', # Ignore the start/end of a file-level triple quoted docstring
]

[tool.coverage.run]
data_file = "/tmp/dodal.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,type-checking,tests,docs,diff-quality}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    pyright
    sphinx-build
    sphinx-autobuild
commands =
    tests: pytest -m 'not s03' --cov=dodal --cov-report term --cov-report xml:cov.xml {posargs}
    type-checking: pyright src tests {posargs}
    pre-commit: pre-commit run --all-files --show-diff-on-failure {posargs}
    docs: sphinx-{posargs:build -E} -T docs build/html
    diff-quality: diff-quality --violations=pyright --fail-under=100
"""

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.extend-ignore = [
    "E501", # Line too long
    "F811", # support typing.overload decorator
]
lint.select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",   # flake8-comprehensions - https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "E",    # pycodestyle errors - https://beta.ruff.rs/docs/rules/#error-e
    "F",    # pyflakes rules - https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "W",    # pycodestyle warnings - https://beta.ruff.rs/docs/rules/#warning-w
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "I001", # isort
]
