[metadata]
name = dodal
description = Ophyd devices and other utils that could be used across DLS beamlines
url = https://github.com/DiamondLightSource/python-dodal
author = Dominic Oram
author_email = dominic.oram@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src
    
setup_requires =
    setuptools_scm[toml]>=6.2

install_requires =
    ophyd
    bluesky
    pyepics
    dataclasses-json
    pillow

[options.extras_require]
# For development tests/docs
dev =
    pytest
    mockito
    setuptools_scm[toml]>=6.2

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests
